<resources>
    <string name="app_name">Second_App</string>
    <string name="store_enter_make">레벨 만들기</string>
    <string name="store_enter_online">온라인 스토어 가기</string>
    <string name="store_enter_saved">저장된 레벨 보기</string>
    <string name="saved_no_levels">다운로드 받은 레벨이 없습니다.\n스토어에서 레벨을 검색해보세요.</string>
    <string name="saved_levels_title">저장된 레벨 목록</string>
    <string name="online_levels_title">온라인 레벨 목록</string>
    <string name="online_levels_page">%1$d페이지</string>
    <string name="online_levels_load_failed">레벨 목록을 불러오지 못했습니다.</string>
    <string name="view_online_levels_play">플레이</string>
    <string name="view_online_levels_highscore">개인 최고 기록: %1$s°C</string>
    <string name="view_online_levels_no_score">개인 최고 기록 없음</string>
    <string name="level_play_temperature_display">%1$s°C</string>
    <string name="level_complete_title">레벨 완료!</string>
    <string name="level_complete_ok">확인</string>
    <string name="level_complete_stat1_title">온도</string>
    <string name="level_fail">레벨 실패..</string>
    <string name="create_setup_board_size">보드 크기 설정</string>
    <string name="create_setup_size_default">7</string>
    <string name="create_level_back">그만두기</string>
    <string name="create_level_init_temp">시작 온도: %1$s°C</string>
    <string name="create_level_target_temp">목표 온도</string>
    <string name="create_level_test">테스트하기</string>
    <string name="create_level_upload">업로드하기</string>
    <string name="create_level_init_default">20.0</string>
    <string name="create_level_limit_default">30.0</string>
    <string name="create_level_selected_thing">%1$s: %2$s</string>
    <string name="create_level_not_selected">아무것도 선택하지 않음</string>
    <string name="create_level_delete_item">아이템 삭제</string>
    <string name="create_level_start_position">시작 위치 배치</string>
    <string name="create_level_time_limit">시간 제한: %1$s초</string>
    <string name="upload_confirm_title">레벨 업로드하기</string>
    <string name="upload_confirm_level_name">레벨 이름을 적어주세요</string>
    <string name="upload_confirm_name_hint">1 ~ 16 글자</string>
    <string name="back_warning_message">주의: 그만두면 만들던 레벨이 사라집니다.\n정말로 그만둘건가요?</string>
    <string name="back_warning_resume">계속하기</string>
    <string name="back_warning_back">그만두기</string>
    <string name="set_temp_hint">온도 입력</string>
    <string name="set_init_temp_title">시작 온도 설정</string>
    <string name="set_time_limit">제한 시간 설정</string>
    <string name="general_confirm">확인</string>
    <string name="second">초</string>
    <string name="freeze">FREEZE</string>

    <string-array name="seconds">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
        <item>110</item>
        <item>120</item>
        <item>130</item>
        <item>140</item>
        <item>150</item>
        <item>160</item>
        <item>170</item>
        <item>180</item>
    </string-array>
</resources>