<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:text="@string/set_time_limit"
        />

    <LinearLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.8"
        android:orientation="horizontal"
        >

        <Spinner
            android:id="@+id/spinner_second"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/second"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            />

    </LinearLayout>





    <android.widget.Button
        android:id="@+id/btn_set_time_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.7"
        android:text="@string/general_confirm"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

</androidx.constraintlayout.widget.ConstraintLayout>