<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_level_complete_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_complete_title"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_level_complete_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintVertical_bias="0.45"
        android:background="@color/blue_light"
        >

        <TextView
            android:id="@+id/text_level_complete_stat1_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/level_complete_stat1_title"
            android:textSize="24sp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/text_level_complete_stat1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="24sp"
            android:textColor="@color/black"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <android.widget.Button
        android:id="@+id/btn_level_complete_ok"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintVertical_bias="0.9"
        android:text="@string/level_complete_ok"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/round_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>